test/compilable/imports/c12359.d
module imports.c12359;

public import imports.d12359 : LetterCase;
