test/fail_compilation/imports/test314e.d
module imports.test314e;

import imports.test314imp : bar=foo;
